--- a/login/areamember/manifest.json
+++ b/login/areamember/manifest.json
@@ -1,10 +1,9 @@
 {
   "name": "El Código de la Persuasión",
   "short_name": "Persuasión",
-  "start_url": "/login/",
+  "start_url": "/login/areamember/",
   "scope": "/login/",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
